# rtc_practice

./: ArUco_detection.cpp  cam_with_opencv.py  gstreamer_sender.cpp  gstreamer_sender_ros2.cpp  master-raspi
Town/: for_raspberry.py  master-raspi.py
Town/barrier/: barrier.ino
Town/traffic_light/: traffic_light.ino
gstreamer/: receiver.py  sender.py
gstreamer_and_opencv/: receiver.py  sender.py
video_capture/: CMakeLists.txt
video_capture/src/: gstreamer_sender.cpp
video_capture_ros2/: package.xml
video_capture_ros2/src/: aruco_detection.cpp  gstreamer_receiver.cpp  gstreamer_sender.cpp  qr_detector.cpp
